Question ID fixed

--- a/app/SpaceOddity.cfg
+++ b/app/SpaceOddity.cfg
@@ -37,7 +37,7 @@ PAGE_LIST = [
         },
 
     #questionnaires
-    {'name': 'Questionnaire 1', 'path': 'questionnaire/performativeChallenge'},
+    {'name': 'CORGIS', 'path': 'questionnaire/performativeChallenge'},
     {'name': 'Demographics', 'path': 'questionnaire/demographics'},
     {'name': 'End', 'path': 'end'}
 ]
